# ccvpn

./: CMakeLists.txt  README.md  athena_keygen.c  ccnxPing_Client.c  ccnxVPN_Common.c  ccnxVPN_Common.h  ccnxVPN_Stats.c  keygen  server.c
b/: Makefile  ccnxVPN_Client  ccnxVPN_Server  client.keystore  cmake_install.cmake  server.keystore
consumer/: ccnxVPN_Consumer.c
examples/: AEAD.c  main
experiments/: .RData  .Rhistory  1_1_thput.R  better_plots.R  better_plots_yellow.R  drop_red.R  drop_yellow.R  many_clients_plots_red.R  many_clients_plots_yellow.R  n_n_thput.R  plot_latest_result.sh  ultimate_plot.R  ultimate_rtt_plot.R  ultimate_throughput_plot.R
paper/: 01-introduction.tex  02-overview.tex  03-related.tex  04-design.tex  05-sec-analysis.tex  06-experiment.tex  06-perf-analysis.tex  07-experiment.tex  07-experiment.tex.backup  08-security.tex  ccvpn.aux  ccvpn.bbl  ccvpn.blg  ccvpn.tex  main.aux  main.bib  main.tex  references.bib
producer/: ccnxVPN_Producer.c
scripts/: .RData  .Rhistory  client.keystore  dropped_pk_10_10.csv  dropped_sk_100_100.csv  dropped_sk_20_20.csv  experiments.sh  experiments_clean.sh  manyclients_experiments.sh  producer_identity_1  run_clients.sh  run_clients_n_to_1.sh  server.keystore  setup_network.sh  sizes.eps  sizes_relative.eps  start_consumers.sh  start_consumers_n_to_1.sh  start_producers.sh  test.csv  thput_aggr.R  throughput.R  throughput.csv  throughput_pk_1000_1.csv  throughput_pk_150_150.csv  throughput_pk_1_1.csv  throughput_pk_1x1.csv  throughput_pk_1x1_old.csv  throughput_pk_200_1.csv  throughput_pk_200_200.csv  (+31 more)
(+308 files in other folders)
